# Aila

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  bench.ps1  bitsandbytes_issue_xpu_nf4_bf16_gemv.md  bitsandbytes_usage.md  bitsandbytes_xpu_nf4_bf16_fix_walkthrough.md  build.bat  build.ps1  handoff_phase11_q35_vision_optimization.md  handoff_phase6_decode_fusion_plan.md  implementation_plan.md  repro_bnb_xpu_nf4_bf16_gemv.py  run.bat  run.ps1  run_log.txt  smoke.ps1  test_api.py  test_bnb_nf4_xpu.py  test_bnb_nf4_xpu_export.py  test_bnb_nf4_xpu_offline.py  test_cli_think.py  test_think.py  test_think2.py  walkthrough.md
.claude/skills/: decode-perf-optimize.md
.github/: copilot-instructions.md
docs/: C_API.md  Environment_Variables.md
include/: aila_api.h
include/engine/: Engine.hpp  Types.hpp
perf/: presets.json
src/: main.cpp
src/api/: aila_api.cpp
src/audio/: AudioPreprocessor.cpp  AudioPreprocessor.hpp  Qwen3ASRAudioEncoder.cpp  Qwen3ASRAudioEncoder.hpp  mel_fb_data.inc
src/cli/: CLI.cpp  CLI.hpp
src/core/: Context.hpp  Tensor.hpp
src/lora/: LoraConfig.hpp  LoraLoader.cpp  LoraLoader.hpp
src/memory/: KVCache.cpp  KVCache.hpp
src/models/: IModelBackend.hpp  Qwen3.cpp  Qwen3.hpp  Qwen35HybridBnb4Backend.cpp  Qwen35HybridBnb4Backend.hpp  Qwen35HybridTextBackend.cpp  Qwen35HybridTextBackend.hpp  Qwen3ASRBackend.cpp  Qwen3ASRBackend.hpp  Qwen3Bnb4.cpp  Qwen3Bnb4.hpp  Qwen3Bnb4Backend.cpp  Qwen3Bnb4Backend.hpp  Qwen3DenseBackend.cpp  Qwen3DenseBackend.hpp
src/ops/: AttentionOps.cpp  Bnb4BitLinear.cpp  Bnb4BitLinear.hpp  ConvOps.cpp  ConvOps.hpp  ElementwiseOps.cpp  Linear.cpp  NormOps.cpp  Ops.hpp  SamplingOps.cpp  Transpose.cpp  VisionOps.cpp
src/profile/: Device.cpp  Device.hpp  Profiling.cpp  Profiling.hpp
src/templates/: TemplateRegistry.cpp
src/utils/: EnvUtils.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  ModelSpec.cpp  SafeTensors.cpp  SafeTensors.hpp  Tokenizer.cpp  Tokenizer.hpp
src/vision/: Qwen35VisionEncoder.cpp  Qwen35VisionEncoder.hpp
